# ga-optimized-trees

./: .gitignore  Dockerfile  HyperparameterOptimizationDocumentation.md  LICENSE  README.md  README_TESTING.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_dataloader.py
.github/workflows/: ci.yml
configs/: default.yaml  diverse.yaml  optimized.yaml  target.yaml
data/: sample_dataset.csv
notebooks/: 01_quick_start.ipynb
results/benchmark/: optimized_comparison.json
results/optimization/: ga_opt_iris_20251128_001925_progress.json  ga_opt_iris_20251128_001925_report.json
scripts/: bayesian_examples.py  dataset_integration.py  experiment.py  experiment_fast.py  hyperopt_with_optuna.py  master.py  run_pareto_optimization.py  test_dataset_fix.py  test_optimized_config.py  train.py  visualize_comprehensive.py  visualize_results.py  visualize_target_paper.py
src/ga_trees/baselines/: baseline_models.py
src/ga_trees/data/: dataset_loader.py  dataset_loader.py.backup  dataset_loader.py.save
src/ga_trees/evaluation/: explainability.py  feature_importance.py  metrics.py  tree_visualizer.py
src/ga_trees/fitness/: bayesian_calculator.py  calculator.py
src/ga_trees/ga/: engine.py  multi_objective.py
src/ga_trees/genotype/: bayesian_tree_genotype.py  tree_genotype.py
tests/integration/: test_end_to_end.py
tests/unit/: test_dataset_loader.py  test_ga_operators.py  test_genotype.py
